Apply errorprone and nullaway
The main java on which Gradle is running is 25 (via Toolchains), therefore
compilation is done with options.release = 8 flag for compatiblity. It
no longer means that project is compiled with Java 8 - it's compiled
with Java 25, with bytecode compatibility with Java 8.