@@ -1,73 +1,14 @@
-import org.gradle.api.tasks.testing.logging.TestExceptionFormat
-import org.gradle.api.tasks.testing.logging.TestLogEvent
-
 plugins {
-    id("internal.common-convention")
+    id("internal.java-convention")
     id("java-library")
 }
 
 java {
-    toolchain.languageVersion = JavaLanguageVersion.of(8)
     withSourcesJar()
     withJavadocJar()
-}
-
-tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("-parameters")
-    options.encoding = "UTF-8"
-}
-
-tasks.withType<Jar>().configureEach {
-    manifest {
-        attributes["Implementation-Title"] = project.name
-        attributes["Implementation-Version"] = project.version
-        attributes["Build-Jdk-Spec"] = java.toolchain.languageVersion.get().toString()
-        attributes["Created-By"] = "Gradle ${gradle.gradleVersion}"
-    }
-    from("${rootProject.rootDir}/LICENSE") {
-        into("META-INF/")
-        rename { "LICENSE.txt" }
-    }
-}
-
-tasks.withType<Test>().configureEach {
-    useJUnitPlatform()
-
-    testLogging {
-        events(TestLogEvent.FAILED, TestLogEvent.PASSED, TestLogEvent.SKIPPED)
-        exceptionFormat = TestExceptionFormat.SHORT
-        showStandardStreams = true
-    }
-
-    // For resolving warnings from mockito.
-    jvmArgs("-XX:+EnableDynamicAgentLoading")
-
-    systemProperty("user.language", "en")
-    systemProperty("user.country", "US")
 }
 
 // buildSrc/src/main/kotlin/internal.common-convention.gradle.kts - "printVersion" task definition
 tasks.withType<PublishToMavenLocal>().configureEach {
     finalizedBy("printVersion")
-}
-
-// This library targets Java 8 for its main sources to maintain compatibility with older runtime environments used by
-// dependent systems.
-//
-// Unit tests, however, are executed on Java 17 because JUnit 6 requires Java 17 or newer. The Gradle toolchain
-// configuration ensures that only the test compilation and execution use Java 17, while the main code remains compiled
-// for Java 8.
-//
-// In short:
-//   - src/main -> Java 8 (for compatibility)
-//   - src/test -> Java 17 (required by JUnit 6)
-
-// JUnit 6 requires at Java 17+, main keeps Java 8.
-tasks.named<JavaCompile>("compileTestJava") {
-    javaCompiler = javaToolchains.compilerFor { languageVersion = JavaLanguageVersion.of(17) }
-}
-
-// JUnit 6 requires at Java 17+, main keeps Java 8.
-tasks.withType<Test>().configureEach {
-    javaLauncher = javaToolchains.launcherFor { languageVersion = JavaLanguageVersion.of(17) }
 }
